--- a/_pages/404.md
+++ b/_pages/404.md
@@ -2,8 +2,8 @@
 layout: page
 permalink: /404.html
 title: "Page not found"
-description: "Looks like there has been a mistake. Nothing exists here."
+description: #
 redirect: true
 ---
 
-You will be redirected to the main page within 3 seconds. If not redirected, please go back to the [home page]({{ site.baseurl | prepend: site.url }}).
+Looks like there has been a mistake. There is nothing here, but don't worry, you will be redirected to the main page within 3 seconds. If not redirected, please go back to the [home page]({{ site.baseurl | prepend: site.url }}).
