Added gifs, updated news

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,10 +16,11 @@
   author={Alvaro Gonzalez-Hernandez},
   abstract={This will be the abstract.},
   year={2024},
-  doi={10.1002/andp.19053220607},
-  preview={wave-mechanics.gif},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
+  doi={},
+  preview={Kummer 1000.gif},
+  url={},
+  html={},
+  pdf={},
+  publisher={arXiv},
 }
 
