Added BSc and MSc thesis and experimented with tab of Talks

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,16 +11,41 @@
   google_scholar_id={qyhmnyLat1gC}, journal={Sent for},
 
 @Article{Gonzalez-Hernandez2024ExplicitDesingularisation,
-  bibtex_show={true},
-  title="{Explicit desingularisation of Kummer surfaces in characteristic two via specialisation}",
-  author={Alvaro Gonzalez-Hernandez},
-  abstract={This will be the abstract.},
-  year={2024},
-  doi={},
-  preview={Kummer 1000.gif},
-  url={},
-  html={},
-  pdf={},
-  publisher={arXiv},
+  bibtex_show   = {true},
+  title         = "{Explicit desingularisation of Kummer surfaces in characteristic two via specialisation}",
+  author        = {Alvaro Gonzalez-Hernandez},
+  abstract      = {This will be the abstract.},
+  year          = {2024},
+  doi           = {},
+  preview       = {Kummer 1000.gif},
+  url           = {},
+  html          = {},
+  pdf           = {},
+  publisher     = {arXiv},
+  abbr          = {arXiv}, 
+}
+
+@mastersthesis{Mastersthesis,
+  bibtex_show   = {true},
+  author        = {Alvaro Gonzalez-Hernandez},
+  title         = "{Local fields and the Hasse principle}",
+  school        = {University of Oxford},
+  year          = {2021},
+  abstract      = {},
+  pdf           = {msc_dissertation.pdf},
+  preview       = {Kummer 1000.gif},
+  abbr          = {arXiv}, 
+}
+
+@mastersthesis{Bachelorsthesis,
+  bibtex_show   = {true},
+  author        = {Alvaro Gonzalez-Hernandez},
+  type          = {Bachelor's Thesis},
+  title         = "{Continued fractions}",
+  school        = {Universidad de Salamanca},
+  year          = {2020},
+  abstract      = {},
+  pdf           = {bsc_dissertation.pdf},
+  preview       = {Kummer 1000.gif},
 }
 
