Tried to fix pdf embedding and improved Research tab

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,18 +34,20 @@
   abstract      = {},
   pdf           = {msc_dissertation.pdf},
   preview       = {Kummer 1000.gif},
-  abbr          = {arXiv}, 
+  publisher     = {Master's thesis},
+  abbr          = {MSc thesis}, 
 }
 
 @mastersthesis{Bachelorsthesis,
   bibtex_show   = {true},
   author        = {Alvaro Gonzalez-Hernandez},
-  type          = {Bachelor's Thesis},
   title         = "{Continued fractions}",
   school        = {Universidad de Salamanca},
   year          = {2020},
   abstract      = {},
   pdf           = {bsc_dissertation.pdf},
   preview       = {Kummer 1000.gif},
+  publisher     = {Bachelor's thesis},
+  abbr          = {BSc thesis},
 }
 
