Updated logo and improved design

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
   abstract      = {This will be the abstract.},
   year          = {2024},
   doi           = {},
-  preview       = {Kummer Darker Orange.gif},
+  preview       = {Kummer_Darker_Orange.gif},
   url           = {},
   html          = {},
   pdf           = {},
