--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
   abstract      = {This will be the abstract.},
   year          = {2024},
   doi           = {},
-  preview       = {Kummer_Darker_Orange.gif},
+  preview       = {Kummer_Orange.gif},
   url           = {},
   html          = {},
   pdf           = {},
@@ -26,7 +26,6 @@
 }
 
 @mastersthesis{Mastersthesis,
-  bibtex_show   = {false},
   author        = {Alvaro Gonzalez-Hernandez},
   title         = "{Local fields and the Hasse principle}",
   school        = {University of Oxford},
@@ -39,7 +38,6 @@
 }
 
 @mastersthesis{Bachelorsthesis,
-  bibtex_show   = {false},
   author        = {Alvaro Gonzalez-Hernandez},
   title         = "{Continued fractions}",
   school        = {Universidad de Salamanca},
