Added 2 new talks, changed gifs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,7 +32,7 @@
   year          = {2021},
   abstract      = {},
   pdf           = {msc_dissertation.pdf},
-  preview       = {Kummer 1000.gif},
+  preview       = {Hasse_Sky.gif},
   publisher     = {Master's thesis},
   abbr          = {MSc thesis}, 
 }
@@ -44,7 +44,7 @@
   year          = {2020},
   abstract      = {},
   pdf           = {bsc_dissertation.pdf},
-  preview       = {Kummer 1000.gif},
+  preview       = {Zeta_Reder.gif},
   publisher     = {Bachelor's thesis},
   abbr          = {BSc thesis},
 }
