--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
 
 @Article{Gonzalez-Hernandez2024ExplicitDesingularisation,
   bibtex_show   = {true},
-  title         = "{Explicit desingularisation of Kummer surfaces in characteristic two via specialisation}",
+  title         = "{Explicit desingularisation of Kummer surfaces in characteristic two via specialisation (to be released)}",
   author        = {Alvaro Gonzalez-Hernandez},
   abstract      = {This will be the abstract.},
   year          = {2024},
@@ -30,7 +30,10 @@
   title         = "{Local fields and the Hasse principle}",
   school        = {University of Oxford},
   year          = {2021},
-  abstract      = {},
+  abstract      = {We discuss the main results of the theory of local fields and their connections to the study of elliptic curves, in particular, to the computation
+                   of their rank by the method of complete 2-descent. The knowledge gained from this theory is then used to analyse a family of counterexamples to the
+                   Hasse principle depending on a prime parameter $$p$$. This family of curves arises as the homogeneous spaces that appear when applying complete 2-descent
+                   to an elliptic curve E of the form $$y^2 = x(x − p)(x − p − 8)$$ with non-trivial Tate-Shafarevich group.},
   pdf           = {msc_dissertation.pdf},
   preview       = {Hasse_Sky.gif},
   publisher     = {Master's thesis},
@@ -42,7 +45,12 @@
   title         = "{Continued fractions}",
   school        = {Universidad de Salamanca},
   year          = {2020},
-  abstract      = {},
+  abstract      = {Continued fractions have played an important role in the development of many mathematical theories and, even today, they are still a very active
+                   line of research. The study of continued fractions with complex coefficients relies on the analysis of the regions where the continued fraction 
+                   converges. This convergence theory allows us to define meromorphic functions as continued fractions from their formal power series with the help
+                   of a sequence of rational approximations known as Padé approximants. Furthermore, there is an equivalence between real numbers and simple continued
+                   fractions (a special case of continued fractions with integer coefficients) and, based on this equivalence, one can study problems of number theory
+                   such as how well irrational numbers can be approximated by rational numbers or how to solve Pell's equation},
   pdf           = {bsc_dissertation.pdf},
   preview       = {Zeta_Reder.gif},
   publisher     = {Bachelor's thesis},
