change wrong pdf and updated some things

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,8 +30,7 @@
   title         = "{Local fields and the Hasse principle}",
   school        = {University of Oxford},
   year          = {2021},
-  abstract      = {We discuss the main results of the theory of local fields and their connections to the study of elliptic curves, in particular, to the computation
-                   of their rank by the method of complete 2-descent. The knowledge gained from this theory is then used to analyse a family of counterexamples to the
+  abstract      = {We discuss the main results of the theory of local fields and how it allows us to compute the ranks of elliptic curves through the method of complete 2-descent. The knowledge gained from this theory is then used to analyse a family of counterexamples to the
                    Hasse principle depending on a prime parameter. This family of curves arises as the homogeneous spaces that appear when applying complete 2-descent
                    to an elliptic curve with non-trivial Tate-Shafarevich group.},
   pdf           = {msc_dissertation.pdf},
@@ -46,10 +45,9 @@
   school        = {Universidad de Salamanca},
   year          = {2020},
   abstract      = {Continued fractions have played an important role in the development of many mathematical theories and, even today, they are still a very active
-                   line of research. The study of continued fractions with complex coefficients relies on the analysis of the regions where the continued fraction 
-                   converges. This convergence theory allows us to define meromorphic functions as continued fractions from their formal power series with the help
+                   line of research. The study of continued fractions with complex coefficients allows us to define meromorphic functions as continued fractions from their formal power series with the help
                    of a sequence of rational approximations known as Padé approximants. Furthermore, there is an equivalence between real numbers and simple continued
-                   fractions (a special case of continued fractions with integer coefficients) and, based on this equivalence, one can study problems of number theory
+                   fractions (a special case of continued fractions with integer coefficients) and, based on this equivalence, we study problems of number theory
                    such as how well irrational numbers can be approximated by rational numbers or how to solve Pell's equation.},
   pdf           = {bsc_dissertation.pdf},
   preview       = {Zeta_Reder.gif},
