--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,14 +12,20 @@
 
 @Article{Gonzalez-Hernandez2024ExplicitDesingularisation,
   bibtex_show   = {true},
-  title         = "{Explicit desingularisation of Kummer surfaces in characteristic two via specialisation (in preparation)}",
+  title         = "{Explicit desingularisation of Kummer surfaces in characteristic two via specialisation}",
   author        = {Alvaro Gonzalez-Hernandez},
-  abstract      = {This will be the abstract.},
+  abstract      = {We study the birational geometry of the Kummer surfaces associated to the Jacobian varieties of genus two curves, with a particular focus on fields of
+                    characteristic two. In order to do so, we explicitly compute a projective embedding of the Jacobian of a general genus two curve and, from this, we
+                    construct its associated Kummer surface. This explicit construction produces a model for desingularised Kummer surfaces over any field of characteristic not
+                    two, and specialising these equations to characteristic two provides a model of partial desingularisation. Adapting the classic description of the Picard
+                    lattice in terms of tropes, we also describe how to explicitly find completely desingularised models of Kummer surfaces whenever the $p$-rank is not zero. In
+                    the final section of this paper, we compute an example of a Kummer surface with everywhere good reduction over a quadratic number field, and draw connections
+                    between the models we computed and a criterion that determines when a Kummer surface has good reduction at two.},
   year          = {2024},
+  pages         = {34},
   doi           = {},
   preview       = {Kummer_Orange.gif},
   url           = {},
-  html          = {},
   pdf           = {},
   publisher     = {arXiv},
   abbr          = {arXiv}, 
