Added links to paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,6 +26,8 @@
   preview       = {Kummer_Orange.gif},
   publisher     = {arXiv},
   abbr          = {arXiv}, 
+  eprint        = {2409.04532},
+  html          = {https://arxiv.org/abs/2409.04532}
 }
 
 @mastersthesis{Mastersthesis,
