second attempt to fix deployment

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,8 +27,8 @@
   publisher     = {arXiv},
   abbr          = {arXiv}, 
   eprint        = {2409.04532},
-  html          = {https://arxiv.org/abs/2409.04532}
-  journal       = {Submitted.}
+  html          = {https://arxiv.org/abs/2409.04532},
+  journal       = {Submitted.},
 }
 
 @mastersthesis{SummerReport,
