fixed errors with pictures

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@
   abbr          = {arXiv}, 
   eprint        = {2409.04532},
   html          = {https://arxiv.org/abs/2409.04532},
-  journal       = {Submitted.},
+  journal       = {Submitted},
 }
 
 @mastersthesis{SummerReport,
@@ -39,8 +39,8 @@
   abstract      = {This is a survey of the theory of elliptic K3 surfaces and Mordell-Weil lattices. As an application of this theory, we explain how to compute bounds for the Picard number of an elliptic surface.},
   pdf           = {summer_report.pdf},
   preview       = {Elliptic_fibration.gif},
-  publisher     = {Summer Report},
-  abbr          = {Summer Report}, 
+  publisher     = {Summer report},
+  abbr          = {Summer report}, 
 }
 
 
