--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
 
 @Article{Gonzalez-Hernandez2025IntersectionsStrata,
   bibtex_show   = {true},
-  title         = "{Intersections of the automorphism and the Ekedahl-Oort strata in $M_2$}",
+  title         = "{Intersections of the automorphism and the Ekedahl-Oort strata in the moduli space of genus two curves}",
   author        = {Alvaro Gonzalez-Hernandez},
   abstract      = {We compute the intersections between the automorphism strata and the pullback by the Torelli map of the Ekedahl-Oort strata inside the moduli space of genus two curves. We first describe explicitly which possible automorphism groups a genus two curve can have over a field of positive characteristic, and parametrise the families of curves with a prescribed automorphism group. Then, we describe an algorithm to compute the strata of genus two curves whose Jacobian variety has a fixed Ekedahl-Oort type. Finally, we compute the dimension and number of irreducible components of the intersections between the strata.},
   year          = {2025},
