--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,26 +24,29 @@
   html          = {https://arxiv.org/abs/2507.07278},
   journal       = {arXiv preprint. Comments are welcome!},
 }
+
+
 @Article{Gonzalez-Hernandez2024ExplicitDesingularisation,
   bibtex_show   = {true},
-  title         = "{Explicit desingularisation of Kummer surfaces in characteristic two via specialisation}",
-  author        = {Alvaro Gonzalez-Hernandez},
-  abstract      = {We study the birational geometry of the Kummer surfaces associated to the Jacobian varieties of genus two curves, with a particular focus on fields of
-                    characteristic two. In order to do so, we explicitly compute a projective embedding of the Jacobian of a general genus two curve and, from this, we
-                    construct its associated Kummer surface. This explicit construction produces a model for desingularised Kummer surfaces over any field of characteristic not
-                    two, and specialising these equations to characteristic two provides a model of partial desingularisation. Adapting the classic description of the Picard
-                    lattice in terms of tropes, we also describe how to explicitly find completely desingularised models of Kummer surfaces whenever the $p$-rank is not zero. In
-                    the final section of this paper, we compute an example of a Kummer surface with everywhere good reduction over a quadratic number field, and draw connections
-                    between the models we computed and a criterion that determines when a Kummer surface has good reduction at two.},
-  year          = {2024},
-  pages         = {34},
-  preview       = {Kummer_Orange.gif},
-  publisher     = {arXiv},
-  abbr          = {arXiv}, 
+  title = "{Explicit desingularisation of Kummer surfaces in characteristic two via specialisation}",
+  author = {Alvaro Gonzalez-Hernandez},
+  journal = {Journal of Symbolic Computation},
+  volume = {135},
+  pages = {102541},
+  year = {2026},
+  issn = {0747-7171},
+  doi = {https://doi.org/10.1016/j.jsc.2025.102541},
+  url = {https://www.sciencedirect.com/science/article/pii/S0747717125001233},
+  author = {Alvaro Gonzalez-Hernandez},
+  keywords = {Kummer surfaces, Characteristic two, Genus two curves, Everywhere good reduction},
+  abstract = {We study the birational geometry of the Kummer surfaces associated to the Jacobian varieties of genus two curves, with a particular focus on fields of characteristic two. In order to do so, we explicitly compute a projective embedding of the Jacobian of a general genus two curve and, from this, we construct its associated Kummer surface. This explicit construction produces a model for desingularised Kummer surfaces over any field of characteristic not two, and specialising these equations to characteristic two provides a model of a partial desingularisation. Adapting the classic description of the Picard lattice in terms of tropes, we also describe how to explicitly find completely desingularised models of Kummer surfaces whenever the p-rank is not zero. In the final section of this paper, we compute an example of a Kummer surface with everywhere good reduction over a quadratic number field, and draw connections between the models we computed and a criterion that determines when a Kummer surface has good reduction at two.},
+  preview = {Kummer_Orange.gif},
+  publisher     = {Journal of Symbolic Computation},
+  abbr          = {Journal of Symbolic Computation}, 
   eprint        = {2409.04532},
   html          = {https://arxiv.org/abs/2409.04532},
-  journal       = {Submitted},
 }
+
 
 @mastersthesis{SummerReport,
   author        = {Alvaro Gonzalez-Hernandez},
