improvements of fixing

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@
   title         = "{Intersections of the automorphism and the Ekedahl-Oort strata in the moduli space of genus two curves}",
   author        = {Alvaro Gonzalez-Hernandez},
   abstract      = {We compute the intersections between the automorphism strata and the pullback by the Torelli map of the Ekedahl-Oort strata inside the moduli space of genus two curves. We first describe explicitly which possible automorphism groups a genus two curve can have over a field of positive characteristic, and parametrise the families of curves with a prescribed automorphism group. Then, we describe an algorithm to compute the strata of genus two curves whose Jacobian variety has a fixed Ekedahl-Oort type. Finally, we compute the dimension and number of irreducible components of the intersections between the strata.},
-  year          = {2025},
+  year          = {2026},
   pages         = {21},
   preview       = {Automorphism_genus_2.gif},
   publisher     = {arXiv},
@@ -42,9 +42,9 @@
   abstract = {We study the birational geometry of the Kummer surfaces associated to the Jacobian varieties of genus two curves, with a particular focus on fields of characteristic two. In order to do so, we explicitly compute a projective embedding of the Jacobian of a general genus two curve and, from this, we construct its associated Kummer surface. This explicit construction produces a model for desingularised Kummer surfaces over any field of characteristic not two, and specialising these equations to characteristic two provides a model of a partial desingularisation. Adapting the classic description of the Picard lattice in terms of tropes, we also describe how to explicitly find completely desingularised models of Kummer surfaces whenever the p-rank is not zero. In the final section of this paper, we compute an example of a Kummer surface with everywhere good reduction over a quadratic number field, and draw connections between the models we computed and a criterion that determines when a Kummer surface has good reduction at two.},
   preview = {Kummer_Orange.gif},
   publisher     = {Journal of Symbolic Computation},
-  abbr          = {Journal of Symbolic Computation}, 
+  abbr          = {J. Symb. Comput.}, 
   eprint        = {2409.04532},
-  html          = {https://arxiv.org/abs/2409.04532},
+  html          = {https://www.sciencedirect.com/science/article/pii/S0747717125001233},
 }
 
 
