--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,6 +48,18 @@
 }
 
 
+@masterthesis{PhDThesis,
+  author        = {Alvaro Gonzalez-Hernandez},
+  title         = "{K3 quotients of abelian surfaces in positive characteristic}",
+  school        = {University of Warwick},
+  year          = {2025},
+  abstract      = {In this thesis, we study classical and generalised Kummer surfaces, with a particular focus on the case of positive characteristic. We extend the current classification of generalised Kummer surfaces to characteristics two, three, and five, and construct many explicit examples, both when the abelian surface is the product of two elliptic curves and when it is the Jacobian of a genus two curve. We also prove several related results, including the existence of Kummer surfaces with everywhere good reduction over number fields, and a description of the intersections between the automorphism strata and the Ekedahl–Oort strata inside the moduli space of genus two curves},
+  pdf           = {phd_thesis.pdf},
+  preview       = {Generalised_Kummer.gif},
+  publisher     = {PhD thesis},
+  abbr          = {PhD thesis}, 
+}
+
 @mastersthesis{SummerReport,
   author        = {Alvaro Gonzalez-Hernandez},
   title         = "{Singular fibres of elliptic surfaces}",
